src/examples/errors/bad_expression_char_mix.del


def main() -> int {

    char my_char = "J";

    int some_int = my_char;

    return 0;
}